# mcp-standards

./: --path  .eslintrc.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  LAUNCH-CHECKLIST.md  LAUNCH-SUMMARY.md  PRD.md  PROJECT_STRUCTURE.md  PUBLISHING.md  QA_FINDINGS.md  QA_FIXES_COMPLETE.md  README.md  README_SIMPLE.md  UAT_READINESS_REPORT.md  USAGE_V2.md  agentdb_http_server.cjs  deploy_v2.py  install.sh  package-lock.json  package.json  pyproject.toml  setup-self-learning.sh  test-memory.sh  test-quick.sh  test-self-learning.sh  test_agentdb_direct.cjs  test_performance_optimization.py  test_scalability_direct.py  test_stress_comprehensive.py  test_v1_to_v2_migration.py  test_v2_comprehensive.py  tsconfig.json  tsup.config.ts  v2_plan_draft.md  validate.sh  vitest.config.ts
.claude-flow/metrics/: performance.json  task-metrics.json
.claude/skills/: remember-preferences.md
.github/workflows/: ci.yml  deploy.yml  publish-npm.yml  publish-pypi.yml  release.yml
.hive-mind/: hive.db
.swarm/: memory.db
config/: claude-mcp.json  hooks.json
docs/: .project_memory.md  CRITICAL_BUGS_FOUND.md  DEPLOYMENT-ANALYSIS.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  INTEGRATION_GUIDE.md  LAUNCH_STRATEGY.md  MCP_DEPLOYMENT_RESEARCH.md  QUICKSTART_SIMPLE.md  SELF-LEARNING-PRD.md  SIMPLE_V2_PLAN.md  VALIDATION_CHECKLIST.md
docs/architecture/: CONTEXT_OPTIMIZATION_SYSTEM.md  CONTEXT_QUICK_START.md  CONTEXT_SYSTEM_SUMMARY.md  CONTEXT_TECHNICAL_SPECS.md  IMPLEMENTATION_ROADMAP.md  package-manager-intelligence-system.md  pmis-summary.md  v2-agentdb-integration-spec.md  v2-architecture-diagrams.md  v2-implementation-gaps.md  v2-implementation-roadmap.md
docs/future/: ARCHITECTURE.md  QUICK-START.md  README.md  prd.md
docs/guides/: QUICKSTART.md  SELF-LEARNING-GUIDE.md
docs/research/: README.md  executive-summary.md  memory-systems-analysis.md  quick-reference.md
docs/technical/: ARCHITECTURE.md
examples/: README.md  context_optimization_demo.py  direct-usage.ts  quick_test.py  v2_demo.py
mcp-servers/claude-memory/: CLAUDE.md  README.md  monitor-memory.sh  pyproject.toml  run_enhanced_server.py  run_server.py  start_server.sh  validate-fix.sh
mcp-servers/claude-memory/.cursor/rules/: standards.mdc
mcp-servers/claude-memory/.github/: copilot-instructions.md
mcp-servers/claude-memory/claude_memory/: __init__.py  autolog.py  schema_migration.py  server.py
scripts/: setup-agentdb.js
src/: client.ts  embeddings.ts  index.ts  lib.ts  memory-store.ts  server.ts  types.ts
src/hooks/: capture_hook.py
src/intelligence/: __init__.py
tests/: README.md  TESTING-SUMMARY.md  conftest.py  test-cross-environment.sh  test-library.js  test-strategy.md  test_performance_quick.py  test_production_agentdb.py  test_search_debug.py  test_simple_setup.py  test_stress_quick.py  test_v2_hook_integration.py  verify-shared-memory.sh
(+37 files in other folders)
