[project]
name = "claude-memory-mcp"
version = "0.1.0"
description = "Persistent memory for Claude using SQLite with full-text search"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Matt Strautmann", email = "matt@mattstrautmann.com"}
]
keywords = ["claude", "mcp", "memory", "sqlite", "knowledge-base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/mattstrautmann/research-mcp"
Documentation = "https://github.com/mattstrautmann/research-mcp#readme"
Repository = "https://github.com/mattstrautmann/research-mcp"
Issues = "https://github.com/mattstrautmann/research-mcp/issues"

[project.scripts]
claude-memory = "claude_memory.server:main"

[tool.hatch.build.targets.wheel]
packages = ["claude_memory"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []